--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
+    "psycopg2-binary>=2.9.10",
     "pydantic[email]>=2.11.3",
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
