--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -14,3 +14,7 @@ DB_NAME=chatapp
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+
+# Gemini API Configuration
+GEMINI_MODEL_NAME=google_genai:gemini-2.0-flash
+GEMINI_API_KEY=your-gemini-api-key
