--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
+    "langchain[google-genai]>=0.3.26",
+    "langgraph>=0.4.10",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
     "pydantic[email]>=2.11.3",
